--- a/templates/cotton/table/index.html
+++ b/templates/cotton/table/index.html
@@ -32,7 +32,7 @@
   <div class="bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-700 rounded-lg shadow-sm overflow-hidden">
     
     <!-- Table -->
-    <div class="overflow-x-auto">
+    <div class="overflow-x-auto [&::-webkit-scrollbar]:h-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
       <table class="w-full text-sm text-left">
         
         <!-- Header -->
